GNOME Bugzilla – Bug 772925
<Control>Enter should "Open in new window" instead of <control><shift>w
Last modified: 2016-10-16 10:01:55 UTC
.
Created attachment 337697 [details] [review] files-view: Use <control>Return to open selected folder in new window It makes more sense than the complex <control><shift>w accel. This is the default behavior for launching a new instance of an opened application in GNOME Shell. Currently, pressing "Return/Enter" with a selected folder, opens it. In doing so, using the <control> modifier should open the selected folder in a new window. This widespread behavior is also related to <control> + click for opening links in a web browser.
Created attachment 337698 [details] [review] help-overlay: Update "Open in new window" shortcut According to the changes in commit e60196c.
Based solely on the behavior in web browsers I'd go for Ctrl+Enter myself as well.
Review of attachment 337697 [details] [review]: LGTM, thanks!
Review of attachment 337698 [details] [review]: Great!
Attachment 337697 [details] pushed as 3c4a3a0 - files-view: Use <control>Return to open selected folder in new window Attachment 337698 [details] pushed as f75d21f - help-overlay: Update "Open in new window" shortcut